--- a/pom.xml
+++ b/pom.xml
@@ -13,8 +13,8 @@
 
 	<name>CrazySpawnerAI</name>
 	<url>http://dev.bukkit.org/bukkit-plugins/crazyspawnerai/</url>
-	<description>CrazySpawner Plugin for more advanced ai mosters in Bukkit Servers.</description>
-	<inceptionYear>2011</inceptionYear>
+	<description>CrazySpawnerAI Plugin for more advanced ai for monsters in Bukkit Servers.</description>
+	<inceptionYear>2013</inceptionYear>
 
 	<organization>
 		<name>Crazy</name>
