Added Maven-Jar-Plugin to pom

--- a/pom.xml
+++ b/pom.xml
@@ -95,6 +95,15 @@
 					<target>1.7</target>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<finalName>${project.name}</finalName>
+					<outputDirectory>.</outputDirectory>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
