--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ${project.name}
 main: de.st_ddt.crazyspawner.ai.CrazySpawnerAI
 author: ST-DDT
-version: ${project.version}
+version: ${project.version}.${timestamp}
 website: ${project.url}
 # requires CrazyCore v${crazycore.version} or later
 # requires CrazySpawner v${crazyspawner.version} or later
